--- a/css/test.css
+++ b/css/test.css
@@ -2,16 +2,33 @@
   box-sizing: border-box;
 }
 
+.wrapper {
+  display: flex;
+  align-items: center;
+  /* flex-wrap: wrap; */
+}
+
 .box {
   width: 150px;
   height: 150px;
-  padding: 20px;
+  padding: 10px;
   color: white;
+  font-size: 24px;
   background-color: chocolate;
   border: 10px solid gold;
-  margin: 20px;
+  margin: 10px;
+
+  /* flex-grow: 1; */
+  /* flex-shrink: 0; */
+  /* flex-basis: calc(100% / 4); */
+
+  /* flex: 1 0 250px; */
 }
 
-/* .box:first-child {
-  background-color: brown;
+/* .box:nth-child(2) {
+  order: 1;
+}
+
+.box:nth-child(3) {
+  order: 2;
 } */
