--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,46 @@
   );
 }
 
+.mb-8px {
+  margin-bottom: 8px;
+}
+
+.mb-16px {
+  margin-bottom: 16px;
+}
+
+.mb-24px {
+  margin-bottom: 24px;
+}
+
+.mb-32px {
+  margin-bottom: 32px;
+}
+
+.mb-40px {
+  margin-bottom: 40px;
+}
+
+.mr-8px {
+  margin-right: 8px;
+}
+
+.mr-16px {
+  margin-right: 16px;
+}
+
+.mr-24px {
+  margin-right: 24px;
+}
+
+.mr-32px {
+  margin-right: 32px;
+}
+
+.mr-40px {
+  margin-right: 40px;
+}
+
 /* Base */
 ::-moz-selection {
   color: var(--color-invert);
@@ -83,6 +123,44 @@ p {
 }
 
 /* Components */
+.advantage-card {
+  padding: 32px 40px;
+  border-radius: 8px;
+  margin-bottom: 32px;
+}
+
+.advantage-card:hover {
+  background-color: var(--color-invert);
+}
+
+.advantage-card-icon {
+  fill: var(--color-brand);
+  margin-bottom: 16px;
+}
+
+.advantage-card-title {
+  margin-bottom: 8px;
+}
+
+.advantage-card-text {
+  margin-bottom: 0;
+}
+
+.advantages {
+  position: relative;
+}
+
+.advantages::before {
+  position: absolute;
+  z-index: -1;
+  top: 24px;
+  left: 0;
+  width: 600px;
+  height: 160px;
+  background-image: var(--decor-gradient);
+  content: "";
+}
+
 .button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -117,6 +195,67 @@ p {
   text-transform: capitalize;
 }
 
+.feature-card {
+  padding: 64px 50px 60px;
+  fill: var(--color-brand);
+  background-color: var(--color-invert);
+  border-radius: 8px;
+}
+
+.feature-card-icon {
+  margin-bottom: 32px;
+}
+
+.features {
+  position: relative;
+}
+
+.features::before {
+  position: absolute;
+  z-index: -1;
+  bottom: 24px;
+  right: 0;
+  width: 600px;
+  height: 160px;
+  background-image: var(--decor-gradient);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  content: "";
+}
+
+.features::after {
+  position: absolute;
+  z-index: -1;
+  bottom: 24px;
+  left: 0;
+  width: 224px;
+  height: 224px;
+  background-image: url("../images/decor-dots.png");
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  content: "";
+}
+
+.features-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 44px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.features-item {
+  -ms-flex-preferred-size: calc((100% - 88px) / 3);
+      flex-basis: calc((100% - 88px) / 3);
+}
+
+.features-item:nth-child(even) .feature-card {
+  color: var(--color-invert);
+  fill: var(--color-invert);
+  background-color: var(--color-brand);
+}
+
 .header {
   padding-top: 48px;
 }
@@ -130,7 +269,7 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 40px;
+  gap: 100%/20%;
 }
 .header__nav {
   display: -webkit-box;
@@ -159,15 +298,12 @@ p {
   text-decoration: none;
   text-underline-offset: 2px;
 }
-
 .header__link:hover {
   text-decoration: underline;
 }
-
 .header__link--current {
   color: var(--color-brand);
 }
-
 .header__link--current::after {
   display: block;
   position: absolute;
@@ -178,6 +314,23 @@ p {
   margin-top: 10px;
   background-color: var(--color-brand);
   content: "";
+}
+
+.heading-title {
+  margin: 0 0 8px;
+  color: var(--color-heading-title);
+  font-size: 24px;
+  line-height: 1.333;
+  text-transform: uppercase;
+}
+
+.heading-subtitle {
+  margin: 0 0 40px;
+  color: var(--color-heading-subtitle);
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 1.333;
+  text-transform: uppercase;
 }
 
 .hero-section {
