--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import './utils/indents';
 @import './utils/mixins';
 @import './utils/placeholders';
+@import './utils/breakpoints';
 
 /* Base */
 @import './base/base';
@@ -18,6 +19,7 @@
 @import './components/header';
 @import './components/heading';
 @import './components/hero-section';
+@import './components/mobile-menu';
 
 /* Layout */
 @import './layout/container';
