--- a/css/main.css
+++ b/css/main.css
@@ -245,9 +245,17 @@ p {
       flex-wrap: wrap;
 }
 
-.features-item {
-  -ms-flex-preferred-size: calc((100% - 88px) / 3);
-      flex-basis: calc((100% - 88px) / 3);
+@media (min-width: 768px) {
+  .features-item {
+    -ms-flex-preferred-size: calc((100% - 44px) / 2);
+        flex-basis: calc((100% - 44px) / 2);
+  }
+}
+@media (min-width: 1200px) {
+  .features-item {
+    -ms-flex-preferred-size: calc((100% - 88px) / 3);
+        flex-basis: calc((100% - 88px) / 3);
+  }
 }
 
 .features-item:nth-child(even) .feature-card {
@@ -269,7 +277,7 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 100%/20%;
+  gap: 40px;
 }
 .header__nav {
   display: -webkit-box;
@@ -286,10 +294,15 @@ p {
           flex-grow: 1;
 }
 .header__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 40px;
+  display: none;
+}
+@media (min-width: 768px) {
+  .header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 40px;
+  }
 }
 .header__link {
   position: relative;
@@ -301,19 +314,15 @@ p {
 .header__link:hover {
   text-decoration: underline;
 }
-.header__link--current {
-  color: var(--color-brand);
+@media (min-width: 768px) {
+  .header__burger {
+    display: none;
+  }
 }
-.header__link--current::after {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  margin-top: 10px;
-  background-color: var(--color-brand);
-  content: "";
+@media (max-width: 767px) {
+  .header__button {
+    display: none;
+  }
 }
 
 .heading-title {
@@ -333,11 +342,10 @@ p {
   text-transform: uppercase;
 }
 
-.hero-section {
+.hero {
   padding: 32px 0 64px;
 }
-
-.hero-container {
+.hero__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -348,22 +356,25 @@ p {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
-.hero-content {
+.hero__content {
   max-width: 600px;
 }
-
-.hero-title {
+.hero__title {
   position: relative;
   margin-bottom: 24px;
   color: var(--color-secondary);
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 500;
-  line-height: 1.333;
+  line-height: 1.25;
   text-transform: uppercase;
 }
-
-.hero-title::before {
+@media (min-width: 768px) {
+  .hero__title {
+    font-size: 36px;
+    line-height: 1.333;
+  }
+}
+.hero__title::before {
   position: absolute;
   z-index: -1;
   top: -56px;
@@ -374,9 +385,37 @@ p {
   border-radius: 50%;
   content: "";
 }
-
-.hero-text {
+.hero__text {
   margin-bottom: 40px;
+}
+@media (max-width: 767px) {
+  .hero__image {
+    display: none;
+  }
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-background);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+}
+.mobile-menu__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 /* Layout */
