--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 100% / 20%;
+    gap: 40px;
   }
 
   &__nav {
@@ -16,8 +16,12 @@
   }
 
   &__menu {
-    display: flex;
-    gap: 40px;
+    display: none;
+
+    @media (min-width: 768px) {
+      display: flex;
+      gap: 40px;
+    }
   }
 
   &__link {
@@ -31,20 +35,32 @@
       text-decoration: underline;
     }
 
-    &--current {
-      color: var(--color-brand);
+    // &--current {
+    //   color: var(--color-brand);
 
-      &::after {
-        display: block;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 3px;
-        margin-top: 10px;
-        background-color: var(--color-brand);
-        content: '';
-      }
+    //   &::after {
+    //     display: block;
+    //     position: absolute;
+    //     bottom: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 3px;
+    //     margin-top: 10px;
+    //     background-color: var(--color-brand);
+    //     content: '';
+    //   }
+    // }
+  }
+
+  &__burger {
+    @media (min-width: 768px) {
+      display: none;
+    }
+  }
+
+  &__button {
+    @media (max-width: 767px) {
+      display: none;
     }
   }
 }
