--- a/scss/components/_hero-section.scss
+++ b/scss/components/_hero-section.scss
@@ -1,41 +1,50 @@
-.hero-section {
+.hero {
   padding: 32px 0 64px;
-}
 
-.hero-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-.hero-content {
-  max-width: 600px;
-}
+  &__content {
+    max-width: 600px;
+  }
 
-.hero-title {
-  // @include ellepsis;
+  &__title {
+    position: relative;
+    margin-bottom: 24px;
+    color: var(--color-secondary);
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 1.25;
+    text-transform: uppercase;
 
-  position: relative;
-  margin-bottom: 24px;
-  color: var(--color-secondary);
-  font-size: 36px;
-  font-weight: 500;
-  line-height: 1.333;
-  text-transform: uppercase;
-}
+    @include for-tablet-landscape-up {
+      font-size: 36px;
+      line-height: 1.333;
+    }
+  }
 
-.hero-title::before {
-  position: absolute;
-  z-index: -1;
-  top: -56px;
-  left: 150px;
-  width: 100px;
-  height: 100px;
-  background-image: var(--decor-gradient);
-  border-radius: 50%;
-  content: '';
-}
+  &__title::before {
+    position: absolute;
+    z-index: -1;
+    top: -56px;
+    left: 150px;
+    width: 100px;
+    height: 100px;
+    background-image: var(--decor-gradient);
+    border-radius: 50%;
+    content: '';
+  }
 
-.hero-text {
-  margin-bottom: 40px;
+  &__text {
+    margin-bottom: 40px;
+  }
+
+  &__image {
+    @media (max-width: 767px) {
+      display: none;
+    }
+  }
 }
